--- a/index.html
+++ b/index.html
@@ -36,6 +36,6 @@
             <img src="images/dice-5.png" alt="Dice" class="dice">
         </div>
         
-        <script src="script.js"></script>
+        <script src="script2.js"></script>
     </body>
 </html>
